Commit nuevo tamaño XXL como feature

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -65,6 +65,7 @@
                     <option value="Pequeña">Pequeña</option>
                     <option value="Mediana" selected>Mediana</option>
                     <option value="Grande">Grande</option>
+                    <option value="Extra_Grande">XXL</option>
                 </select>
             </div>
     
