Se agrega un nuevo tamaño de pizza XXL

--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -66,6 +66,7 @@
                     <option value="Mediana" selected>Mediana</option>
                     <option value="Grande">Grande</option>
                     <option value="Extra_Grande">XXL</option>
+                    <option value="Extra_Extra_Grande">XXXL</option>
                 </select>
             </div>
     
