--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -7,12 +7,13 @@
     <title>Pizzas Full Stack</title>
     <link href="css/estilos.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
     
 </head>
 <body>
 
     <div class="logo">
-        <img  class="imagen" src="images/pizza.jpg" alt="Imagen de una pizza con mucho queso."></divimg>
+        <img  class="imagen" src="images/pizza.jpg" alt="Imagen de una pizza con mucho queso."></div>
     </div>
     
     <div class="titulo">
@@ -106,5 +107,3 @@
     </form>
 </body>
 </html>
-
-<script src="js/script.js"></script>
