--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="logo">
-        <img  class="imagen" src="images/pizza.jpg" alt="Imagen de una pizza con mucho queso."></div>
+        <img  class="imagen" src="images/pizza.jpg" alt="Imagen de una pizza con mucho queso."></img>
     </div>
     
     <div class="titulo">
@@ -100,9 +100,6 @@
             <button type="submit">Enviar pedido</button>
             <button type="reset">Resetear pedido</button>
         </div>
-
-
-
 
     </form>
 </body>
