--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="logo">
-        <img  class="imagen" src="images/pizza.jpg" alt="Imagen de una pizza con mucho queso."></img>
+        <img  class="imagen" src="images/pizza.jpg" alt="Imagen de una pizza con mucho queso.">
     </div>
     
     <div class="titulo">
