--- a/prepara_pedido.html
+++ b/prepara_pedido.html
@@ -28,12 +28,12 @@
             </div>
     
             <div class="recuadro">
-                <label id="nombre_cliente" for="nombre_cliente">Nombre:</label>
+                <label id="nombre_cliente" for="nombre">Nombre:</label>
                 <input id="nombre" type="text" name="nombre_cliente">
             </div>
     
             <div class="recuadro">
-                <label id="apellido_cliente" for="apellido_cliente">Apellidos:</label>
+                <label id="apellido_cliente" for="apellido">Apellidos:</label>
                 <input id="apellido" type="text" name="apellido_cliente">
 
             </div>
@@ -83,7 +83,7 @@
             </div>
             <div>
                 <label for="Champinhones">Chapiñones</label>
-                <input type="checkbox" name="Chapinhones" id="Chapinhones">
+                <input type="checkbox" name="Champinhones" id="Champinhones">
             </div>
             <div>
                 <label for="peperoni">Pepperoni</label>
